5.4.3 (Jan 7, 2018)
 - Fix bug in localhost client
 - Removed unmaintained dependency causing issues with newer mac os updates
5.4.2 (Dec 22, 2017)
 - Update labels
5.4.1 (Dec 11, 2017)
 - Handle destroyed client in manager
5.4.0 (Sep 6, 2017)
 - Add Client-Destroy support
 - Add Impression listener support for in-memory and uwsgi modes
5.3.0 (Aug 1, 2017)
 - Add off-grid support for localhost broker (auto refresh splits from file)
5.2.2 (Aug 1, 2017)
 - Adding hotfix to set traffic allocation to 100 by default
5.2.1 (Jul 28, 2017)
 - Adding hotfix to keep alive fetcher threads if proxy/backend connection goes temporarily down.
5.2.0 (Jul 26, 2017)
 - Adding Adding regex & boolean matcher
5.1.0 (Jul 19, 2017)
 - Adding dependency matcher
 - Refactoring clients into brokers
5.0.0 (Jun 13, 2017)
 - BREAKING BACKWARD COMPATIBILITY
 - Adding support for Split Synchronizer service
4.1.1 (May 25, 2017)
 - Python 3 fixed incompatible comparison between None an integer
4.1.0 (May 16, 2017)
 - Adding support for String and Set Matchers
4.0.2 (May 8, 2017)
 - Adding support for Traffic Allocation
4.0.1 (April 19, 2017)
 - Hotfix Hashing enumerator to default value LEGACY
4.0.0 (April 17, 2017)
 - Added support for murmur3 hashing native and cpp version for performance
2.2.1
 - Ignore invalid Split fetched from Redis cache
2.2.0
 - Added uwsgi cache support
 - Fixed HTTP status code exceptions
2.1.0
 - Added enabled labels
 - Added impressions by sdk and version including bucketing key
2.0.5
 - Added SDK Factory Method with Manager API and Sdk Client
 - Added Bucketing key support